@@ -1,0 +1,5 @@
+<?php
+
+header($_SERVER['SERVER_PROTOCOL'] . ' 303 See Other');
+header('Location: ../');
+exit();
