@@ -5,4 +5,6 @@
       - Added: Widget v6 support.
       - Updated: In case of uninstallation, all database tables created by the module will be deleted.
       - Added: possibility of using either ID or Reference as order ID in export
+      - Added: information about branch or address delivery carrier into order administration
+        and possibility to change branch using widget
       - Updated: CSV export version upgraded to version 6
